Added endpoint for image storing