@@ -18,6 +18,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -139,7 +140,7 @@ public class UserService implements UserDetailsService {
         return new PageResponseDTO<>(
                 offset > 0 && users.getTotalElements() > 0,
                 (offset + limit) < users.getTotalElements(),
-                users.stream().map(UserDTO::new).toList(),
+                users.stream().map(UserDTO::new).collect(Collectors.toList()),
                 users.getTotalElements());
     }
 
